Remove scroll from repair form
Remove vertical scrollbar from the repair form by adjusting the CSS for the `.box` class.

--- a/src/pages/Repairs/RepairsServices.module.css
+++ b/src/pages/Repairs/RepairsServices.module.css
@@ -26,8 +26,6 @@
   background-color: rgba(255, 255, 255, 0.2);
   position: absolute;
   width: 600px;
-  max-height: 600px;
-  overflow-y: auto;
   top: 19%;
   left: calc(10% + 130px);
   padding: 10px;
